k8s-info-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-info-ingress
  namespace: dev-feature1-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dev-feature1.bteam.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-info-service
                port:
                  number: 80
